<resources>
    <string name="app_name">Mr. Bean coffee</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="gender">Gender</string>
    <string name="email">Email</string>
    <string name="phone_no">Phone No</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
</resources>